Spacing fixes and added font rules

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -8,6 +8,14 @@ h1 {
   font-size: 100px;
 }
 
+h2 {
+  margin: 0;
+}
+
+h3 {
+  margin: 0;
+}
+
 * {
   font-family: "JetBrains Mono", sans-serif;
 }/*# sourceMappingURL=App.css.map */
