--- a/app/src/pages/Craft/Craft.scss
+++ b/app/src/pages/Craft/Craft.scss
@@ -13,5 +13,10 @@
       text-align: center;
       margin-top: 2rem;
     }
+
+    &__subtitle p {
+        font-weight: 100;
+    }
   }
+  
   
