--- a/app/src/styles/partials/_fonts.scss
+++ b/app/src/styles/partials/_fonts.scss
@@ -2,3 +2,11 @@ h1{
     margin: 0;
     font-size: 100px;
 }
+
+h2{
+    margin: 0;
+}
+
+h3{
+    margin: 0;
+}
